# csc212-project1

./: .gitignore  .gradebook  CMakeLists.txt  Category.cpp  Category.h  Course.cpp  Course.h  Deliverable.cpp  Deliverable.h  Grade.h  Gradebook.cpp  Gradebook.h  Interface.cpp  README.md  Relationships.drawio  Student.cpp  Student.h  Untitled Diagram.drawio  gradebookProgram  interface.cpp  interface.h  ioplanning.md  main.cpp
sample/: .gradebook-1  .gradebook-2  .gradebook-3  .gradebook-4  .gradebook-5
src/: Category.cpp  Course.cpp  Course.h  Deliverable.h  Gradebook.cpp  Gradebook.h  Interface.cpp  Interface.h  main.cpp
streamlined/: Course.h  Gradebook.h
